--- a/MVC3/appsettings.json
+++ b/MVC3/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
-    "default": "Server=.;Database=AppMVC3;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False"
+  "ConnectionStrings": {
+    "TheDefault": "Server=.;Database=AppMVC3;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;"
   }
 }
