Part 01 Document Setting

--- a/MVC3/MVC3.PL.csproj
+++ b/MVC3/MVC3.PL.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\MVC3.BLL\MVC3.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\Images\" />
+  </ItemGroup>
+
 </Project>
